--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulatore di Test</title>
+    <title>29° Corso AA.VV.BB. GdF</title>
     <script src="script.js" defer></script>
     <style>
         body {
@@ -119,7 +119,7 @@
 <body>
     <div id="controls">
         <div id="counters">
-            <p>Domande Svolte: <span id="totalCount">0</span></p>
+            <p>Nr. Domanda: <span id="totalCount">0</span></p>
             <p>Risposte Esatte: <span id="correctCount">0</span></p>
             <p>Risposte Errate: <span id="wrongCount">0</span></p>
         </div>
@@ -130,7 +130,7 @@
         </div>
     </div>
     <div id="questionContainer">
-        <h1>Simulatore di Test</h1>
+        <h1>Rispondi alle seguenti domande</h1>
     </div>
     <button id="retryButton">Riprova Domande Sbagliate</button>
 </body>
