--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/icona.ico" type="image/x-icon">
+    <link rel="icon" href="icona.ico" type="image/x-icon">
     <title>29° Corso AA.VV.BB. GdF</title>
     <script src="script.js" defer></script>
     <style>
@@ -144,7 +144,7 @@
         </div>
     </div>
     <header>
-        <img src="images/bannersito.png" alt="Intestazione">
+        <img src="bannersito.png" alt="Intestazione">
     </header>
     <div id="retryContainer">
         <button id="retryButton">Riprova Domande Sbagliate</button>
