--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
             margin-top: 20px;
         }
         #retryButton {
-            display: none;
+            display: flex;
             padding: 10px 20px;
+            flex-direction: row;
             background: #dc3545;
             color: white;
             border: none;
@@ -123,7 +124,7 @@
             font-size: 1.2em;
             cursor: pointer;
             transition: background 0.3s;
-            width: 100%;
+            width: 40%;
         }
         #retryButton:hover {
             background: #c82333;
